// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collectFbt When using string templates should extract correctly multiple params 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 86,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "counting",
          "text": "{1} {2} {2} 3",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural (react native) 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "type": 3,
          },
          {
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "*": {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": {
              "*": {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": {
              "*": {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly name, pronoun, plural 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 119,
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          null,
          null,
        ],
        "t": {
          "*": {
            "*": {
              "*": {
                "desc": "desc",
                "text": "{name} sells their items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells their item",
              },
            },
            "1": {
              "*": {
                "desc": "desc",
                "text": "{name} sells her items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells her item",
              },
            },
            "2": {
              "*": {
                "desc": "desc",
                "text": "{name} sells his items",
              },
              "_1": {
                "desc": "desc",
                "text": "{name} sells his item",
              },
            },
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly supports tables ie fbt:enum 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 37,
      "jsfbt": {
        "m": [
          null,
        ],
        "t": {
          "0": {
            "desc": "counting",
            "text": "a {2} {2} 3",
          },
          "1": {
            "desc": "counting",
            "text": "b {2} {2} 3",
          },
        },
      },
      "line_beg": 3,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with a param 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 52,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "great",
          "text": "testing {it} works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with just string contents 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 19,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "ok",
          "text": "simple",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt When using string templates should extract correctly with the param being first 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 49,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "well",
          "text": "{it} still works",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes when needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "babelNode": {
              "attributes": [
                {
                  "end": 119,
                  "loc": {
                    "end": {
                      "column": 36,
                      "index": 119,
                      "line": 4,
                    },
                    "start": {
                      "column": 15,
                      "index": 98,
                      "line": 4,
                    },
                  },
                  "name": {
                    "end": 107,
                    "loc": {
                      "end": {
                        "column": 24,
                        "index": 107,
                        "line": 4,
                      },
                      "start": {
                        "column": 15,
                        "index": 98,
                        "line": 4,
                      },
                    },
                    "name": "className",
                    "start": 98,
                    "type": "JSXIdentifier",
                  },
                  "start": 98,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 119,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "loc": {
                      "end": {
                        "column": 36,
                        "index": 119,
                        "line": 4,
                      },
                      "start": {
                        "column": 25,
                        "index": 108,
                        "line": 4,
                      },
                    },
                    "start": 108,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                {
                  "end": 151,
                  "loc": {
                    "end": {
                      "column": 68,
                      "index": 151,
                      "line": 4,
                    },
                    "start": {
                      "column": 37,
                      "index": 120,
                      "line": 4,
                    },
                  },
                  "name": {
                    "end": 124,
                    "loc": {
                      "end": {
                        "column": 41,
                        "index": 124,
                        "line": 4,
                      },
                      "start": {
                        "column": 37,
                        "index": 120,
                        "line": 4,
                      },
                    },
                    "name": "href",
                    "start": 120,
                    "type": "JSXIdentifier",
                  },
                  "start": 120,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 151,
                    "extra": {
                      "raw": ""https://somewhere.random"",
                      "rawValue": "https://somewhere.random",
                    },
                    "loc": {
                      "end": {
                        "column": 68,
                        "index": 151,
                        "line": 4,
                      },
                      "start": {
                        "column": 42,
                        "index": 125,
                        "line": 4,
                      },
                    },
                    "start": 125,
                    "type": "StringLiteral",
                    "value": "https://somewhere.random",
                  },
                },
                {
                  "end": 166,
                  "loc": {
                    "end": {
                      "column": 83,
                      "index": 166,
                      "line": 4,
                    },
                    "start": {
                      "column": 69,
                      "index": 152,
                      "line": 4,
                    },
                  },
                  "name": {
                    "end": 160,
                    "loc": {
                      "end": {
                        "column": 77,
                        "index": 160,
                        "line": 4,
                      },
                      "start": {
                        "column": 69,
                        "index": 152,
                        "line": 4,
                      },
                    },
                    "name": "tabindex",
                    "start": 152,
                    "type": "JSXIdentifier",
                  },
                  "start": 152,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 166,
                    "expression": {
                      "end": 165,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "loc": {
                        "end": {
                          "column": 82,
                          "index": 165,
                          "line": 4,
                        },
                        "start": {
                          "column": 79,
                          "index": 162,
                          "line": 4,
                        },
                      },
                      "start": 162,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "loc": {
                      "end": {
                        "column": 83,
                        "index": 166,
                        "line": 4,
                      },
                      "start": {
                        "column": 78,
                        "index": 161,
                        "line": 4,
                      },
                    },
                    "start": 161,
                    "type": "JSXExpressionContainer",
                  },
                },
                {
                  "end": 178,
                  "loc": {
                    "end": {
                      "column": 95,
                      "index": 178,
                      "line": 4,
                    },
                    "start": {
                      "column": 84,
                      "index": 167,
                      "line": 4,
                    },
                  },
                  "name": {
                    "end": 169,
                    "loc": {
                      "end": {
                        "column": 86,
                        "index": 169,
                        "line": 4,
                      },
                      "start": {
                        "column": 84,
                        "index": 167,
                        "line": 4,
                      },
                    },
                    "name": "id",
                    "start": 167,
                    "type": "JSXIdentifier",
                  },
                  "start": 167,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 178,
                    "expression": {
                      "end": 177,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "loc": {
                        "end": {
                          "column": 94,
                          "index": 177,
                          "line": 4,
                        },
                        "start": {
                          "column": 88,
                          "index": 171,
                          "line": 4,
                        },
                      },
                      "start": 171,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "loc": {
                      "end": {
                        "column": 95,
                        "index": 178,
                        "line": 4,
                      },
                      "start": {
                        "column": 87,
                        "index": 170,
                        "line": 4,
                      },
                    },
                    "start": 170,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 179,
              "loc": {
                "end": {
                  "column": 96,
                  "index": 179,
                  "line": 4,
                },
                "start": {
                  "column": 12,
                  "index": 95,
                  "line": 4,
                },
              },
              "name": {
                "end": 97,
                "loc": {
                  "end": {
                    "column": 14,
                    "index": 97,
                    "line": 4,
                  },
                  "start": {
                    "column": 13,
                    "index": 96,
                    "line": 4,
                  },
                },
                "name": "a",
                "start": 96,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 95,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "https://somewhere.random",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 10,
      "col_end": 16,
      "hashToLeaf": {
        "6CzFRF22gqmcMT9hNd4lFQ==": {
          "desc": "some desc",
          "text": "This is a {=link}",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 16,
      "hashToLeaf": {
        "vInz7SvwK8Zthis7azxV9Q==": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=link}"",
          "text": "link",
        },
      },
      "line_beg": 4,
      "line_end": 6,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt fbt nodes: should expose the FbtElementNodes where there are two nested React elements 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
  },
  "fbtElementNodes": [
    {
      "children": [
        {
          "type": "param",
        },
        {
          "type": "text",
        },
        {
          "children": [
            {
              "type": "text",
            },
            {
              "children": [
                {
                  "type": "text",
                },
                {
                  "type": "plural",
                },
                {
                  "type": "text",
                },
              ],
              "phraseIndex": 2,
              "type": "implicitParam",
              "wrapperNode": {
                "babelNode": {
                  "attributes": [],
                  "end": 320,
                  "loc": {
                    "end": {
                      "column": 20,
                      "index": 320,
                      "line": 8,
                    },
                    "start": {
                      "column": 12,
                      "index": 312,
                      "line": 8,
                    },
                  },
                  "name": {
                    "end": 319,
                    "loc": {
                      "end": {
                        "column": 19,
                        "index": 319,
                        "line": 8,
                      },
                      "start": {
                        "column": 13,
                        "index": 313,
                        "line": 8,
                      },
                    },
                    "name": "strong",
                    "start": 313,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 312,
                  "type": "JSXOpeningElement",
                },
                "props": {},
                "type": "strong",
              },
            },
            {
              "type": "text",
            },
          ],
          "phraseIndex": 1,
          "type": "implicitParam",
          "wrapperNode": {
            "babelNode": {
              "attributes": [
                {
                  "end": 262,
                  "loc": {
                    "end": {
                      "column": 34,
                      "index": 262,
                      "line": 7,
                    },
                    "start": {
                      "column": 13,
                      "index": 241,
                      "line": 7,
                    },
                  },
                  "name": {
                    "end": 250,
                    "loc": {
                      "end": {
                        "column": 22,
                        "index": 250,
                        "line": 7,
                      },
                      "start": {
                        "column": 13,
                        "index": 241,
                        "line": 7,
                      },
                    },
                    "name": "className",
                    "start": 241,
                    "type": "JSXIdentifier",
                  },
                  "start": 241,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 262,
                    "extra": {
                      "raw": ""neatoLink"",
                      "rawValue": "neatoLink",
                    },
                    "loc": {
                      "end": {
                        "column": 34,
                        "index": 262,
                        "line": 7,
                      },
                      "start": {
                        "column": 23,
                        "index": 251,
                        "line": 7,
                      },
                    },
                    "start": 251,
                    "type": "StringLiteral",
                    "value": "neatoLink",
                  },
                },
                {
                  "end": 271,
                  "loc": {
                    "end": {
                      "column": 43,
                      "index": 271,
                      "line": 7,
                    },
                    "start": {
                      "column": 35,
                      "index": 263,
                      "line": 7,
                    },
                  },
                  "name": {
                    "end": 267,
                    "loc": {
                      "end": {
                        "column": 39,
                        "index": 267,
                        "line": 7,
                      },
                      "start": {
                        "column": 35,
                        "index": 263,
                        "line": 7,
                      },
                    },
                    "name": "href",
                    "start": 263,
                    "type": "JSXIdentifier",
                  },
                  "start": 263,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 271,
                    "extra": {
                      "raw": ""#"",
                      "rawValue": "#",
                    },
                    "loc": {
                      "end": {
                        "column": 43,
                        "index": 271,
                        "line": 7,
                      },
                      "start": {
                        "column": 40,
                        "index": 268,
                        "line": 7,
                      },
                    },
                    "start": 268,
                    "type": "StringLiteral",
                    "value": "#",
                  },
                },
                {
                  "end": 286,
                  "loc": {
                    "end": {
                      "column": 58,
                      "index": 286,
                      "line": 7,
                    },
                    "start": {
                      "column": 44,
                      "index": 272,
                      "line": 7,
                    },
                  },
                  "name": {
                    "end": 280,
                    "loc": {
                      "end": {
                        "column": 52,
                        "index": 280,
                        "line": 7,
                      },
                      "start": {
                        "column": 44,
                        "index": 272,
                        "line": 7,
                      },
                    },
                    "name": "tabindex",
                    "start": 272,
                    "type": "JSXIdentifier",
                  },
                  "start": 272,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 286,
                    "expression": {
                      "end": 285,
                      "extra": {
                        "raw": "123",
                        "rawValue": 123,
                      },
                      "loc": {
                        "end": {
                          "column": 57,
                          "index": 285,
                          "line": 7,
                        },
                        "start": {
                          "column": 54,
                          "index": 282,
                          "line": 7,
                        },
                      },
                      "start": 282,
                      "type": "NumericLiteral",
                      "value": 123,
                    },
                    "loc": {
                      "end": {
                        "column": 58,
                        "index": 286,
                        "line": 7,
                      },
                      "start": {
                        "column": 53,
                        "index": 281,
                        "line": 7,
                      },
                    },
                    "start": 281,
                    "type": "JSXExpressionContainer",
                  },
                },
                {
                  "end": 298,
                  "loc": {
                    "end": {
                      "column": 70,
                      "index": 298,
                      "line": 7,
                    },
                    "start": {
                      "column": 59,
                      "index": 287,
                      "line": 7,
                    },
                  },
                  "name": {
                    "end": 289,
                    "loc": {
                      "end": {
                        "column": 61,
                        "index": 289,
                        "line": 7,
                      },
                      "start": {
                        "column": 59,
                        "index": 287,
                        "line": 7,
                      },
                    },
                    "name": "id",
                    "start": 287,
                    "type": "JSXIdentifier",
                  },
                  "start": 287,
                  "type": "JSXAttribute",
                  "value": {
                    "end": 298,
                    "expression": {
                      "end": 297,
                      "extra": {
                        "raw": ""uniq"",
                        "rawValue": "uniq",
                      },
                      "loc": {
                        "end": {
                          "column": 69,
                          "index": 297,
                          "line": 7,
                        },
                        "start": {
                          "column": 63,
                          "index": 291,
                          "line": 7,
                        },
                      },
                      "start": 291,
                      "type": "StringLiteral",
                      "value": "uniq",
                    },
                    "loc": {
                      "end": {
                        "column": 70,
                        "index": 298,
                        "line": 7,
                      },
                      "start": {
                        "column": 62,
                        "index": 290,
                        "line": 7,
                      },
                    },
                    "start": 290,
                    "type": "JSXExpressionContainer",
                  },
                },
              ],
              "end": 299,
              "loc": {
                "end": {
                  "column": 71,
                  "index": 299,
                  "line": 7,
                },
                "start": {
                  "column": 10,
                  "index": 238,
                  "line": 7,
                },
              },
              "name": {
                "end": 240,
                "loc": {
                  "end": {
                    "column": 12,
                    "index": 240,
                    "line": 7,
                  },
                  "start": {
                    "column": 11,
                    "index": 239,
                    "line": 7,
                  },
                },
                "name": "a",
                "start": 239,
                "type": "JSXIdentifier",
              },
              "selfClosing": false,
              "start": 238,
              "type": "JSXOpeningElement",
            },
            "props": {
              "className": "neatoLink",
              "href": "#",
              "tabindex": 123,
            },
            "type": "a",
          },
        },
        {
          "type": "text",
        },
      ],
      "phraseIndex": 0,
      "type": "element",
    },
  ],
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "hashToLeaf": {
        "PqPPir8Kg9xSlqdednPFOg==": {
          "desc": "example 1",
          "text": "{name} has shared {=a photo} with you",
        },
        "gVKMc/8jq5vnYR5v2bb32g==": {
          "desc": "example 1",
          "text": "{name} has shared {=[number] photos} with you",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "example 1",
              "text": "{name} has shared {=[number] photos} with you",
              "tokenAliases": {
                "=[number] photos": "=m2",
              },
            },
            "_1": {
              "desc": "example 1",
              "text": "{name} has shared {=a photo} with you",
              "tokenAliases": {
                "=a photo": "=m2",
              },
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 18,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 14,
      "hashToLeaf": {
        "2u1unDTClahYJKZKS5RVCQ==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{=[number] photos}",
        },
        "dO3IlAx8hzcJVQxeQOUhkg==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "{=a photo}",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{=[number] photos}",
              "tokenAliases": {
                "=[number] photos": "=m1",
              },
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "{=a photo}",
              "tokenAliases": {
                "=a photo": "=m1",
              },
            },
          },
        },
      },
      "line_beg": 7,
      "line_end": 16,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 21,
      "hashToLeaf": {
        "Q9mOAQ+ogHG20z2QkEkNmQ==": {
          "desc": "In the phrase: "{name} has shared {=a photo} with you"",
          "text": "a photo",
        },
        "tYYOLLMbffdJQQlSVEVv/A==": {
          "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
          "text": "{number} photos",
        },
      },
      "jsfbt": {
        "m": [
          {
            "token": "name",
            "type": 1,
          },
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "In the phrase: "{name} has shared {=[number] photos} with you"",
              "text": "{number} photos",
            },
            "_1": {
              "desc": "In the phrase: "{name} has shared {=a photo} with you"",
              "text": "a photo",
            },
          },
        },
      },
      "line_beg": 8,
      "line_end": 15,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should create correct child parent mapping for multiple files 1`] = `
{
  "childParentMappings": {
    "1": 0,
    "2": 1,
    "4": 3,
  },
  "phrases": [
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "This is a {=bold with italic inside}.",
          "tokenAliases": {
            "=bold with italic inside": "=m2",
          },
        },
      },
      "line_beg": 3,
      "line_end": 8,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 18,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a {=bold with italic inside}."",
          "text": "bold with {=italic inside}",
          "tokenAliases": {
            "=italic inside": "=m1",
          },
        },
      },
      "line_beg": 5,
      "line_end": 7,
      "project": "",
    },
    {
      "col_beg": 26,
      "col_end": 46,
      "filepath": "example1.react.js",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "This is a bold with {=italic inside}."",
          "text": "italic inside",
        },
      },
      "line_beg": 6,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 12,
      "col_end": 18,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "some desc",
          "text": "Link: {=link}",
          "tokenAliases": {
            "=link": "=m1",
          },
        },
      },
      "line_beg": 3,
      "line_end": 6,
      "project": "",
    },
    {
      "col_beg": 14,
      "col_end": 57,
      "filepath": "./example2.react.js.in",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Link: {=link}"",
          "text": "link",
        },
      },
      "line_beg": 5,
      "line_end": 5,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should dedupe fbt:plurals 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 6,
      "jsfbt": {
        "m": [
          null,
          {
            "singular": true,
            "token": "number",
            "type": 2,
          },
        ],
        "t": {
          "*": {
            "*": {
              "desc": "desc...",
              "text": "There are {number} photos.",
            },
          },
          "_1": {
            "_1": {
              "desc": "desc...",
              "text": "There is 1 photo.",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 9,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the outer token names if needed 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Expose outer token name when script option is given",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "outerTokenName": "=World",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should expose the subject option on top level and inner phrases 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "expose subject",
            "text": "You {=see the world}",
            "tokenAliases": {
              "=see the world": "=m1",
            },
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
      "subject": {
        "end": 80,
        "loc": {
          "end": {
            "column": 52,
            "index": 80,
            "line": 2,
          },
          "identifierName": "aSubject",
          "start": {
            "column": 44,
            "index": 72,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "type": "Identifier",
      },
    },
    {
      "col_beg": 10,
      "col_end": 30,
      "jsfbt": {
        "m": [
          {
            "token": "__subject__",
            "type": 1,
          },
        ],
        "t": {
          "*": {
            "desc": "In the phrase: "You {=see the world}"",
            "text": "see the world",
          },
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
      "subject": {
        "end": 80,
        "loc": {
          "end": {
            "column": 52,
            "index": 80,
            "line": 2,
          },
          "identifierName": "aSubject",
          "start": {
            "column": 44,
            "index": 72,
            "line": 2,
          },
        },
        "name": "aSubject",
        "start": 72,
        "type": "Identifier",
      },
    },
  ],
}
`;

exports[`collectFbt should extract common strings from <fbt common={true}> 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 39,
      "common": true,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbs strings 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt strings 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 27,
      "col_end": 52,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 1,
      "line_end": 1,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract fbt.c strings 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 6,
      "col_end": 23,
      "common": true,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Indicates an editor field is required.",
          "text": "Required",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract strings from a custom collector 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "description",
          "text": "Hello {=World}!",
          "tokenAliases": {},
        },
      },
      "line_beg": 3,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 16,
      "col_end": 38,
      "filepath": "",
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}!"",
          "outerTokenName": "=World",
          "text": "World",
          "tokenAliases": {},
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should extract the author from Docblock 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "author": "Sponge Bob",
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should not expose the outer token names by default 1`] = `
{
  "childParentMappings": {
    "1": 0,
  },
  "phrases": [
    {
      "col_beg": 8,
      "col_end": 14,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "Do not expose outer token name by default",
          "text": "Hello {=World}",
          "tokenAliases": {
            "=World": "=m1",
          },
        },
      },
      "line_beg": 2,
      "line_end": 5,
      "project": "",
    },
    {
      "col_beg": 10,
      "col_end": 22,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "In the phrase: "Hello {=World}"",
          "text": "World",
        },
      },
      "line_beg": 4,
      "line_end": 4,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should not throw because of CSX 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if fbt call param doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 40,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if file-level doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 25,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 3,
      "line_end": 3,
      "project": "someproject",
    },
  ],
}
`;

exports[`collectFbt should still extract strings if in-line doNotExtract is set to false 1`] = `
{
  "childParentMappings": {},
  "phrases": [
    {
      "col_beg": 0,
      "col_end": 46,
      "jsfbt": {
        "m": [],
        "t": {
          "desc": "foo",
          "text": "bar",
        },
      },
      "line_beg": 2,
      "line_end": 2,
      "project": "",
    },
  ],
}
`;
